# 2022-10-21-hanpy-lt-ast-and-pylint

./: README.md  pyproject.toml
ast_demo/: code.py  example_ast.py  example_astroid.py
my_plugins/: .pylintrc  __init__.py  long_var.py  many_args.py
my_plugins/tests/: test_long_var.py  test_many_args.py
src/: a.py
